(lang dune 2.9)
(name path_tracer)
(source (github dalev/path-tracer-ocaml))
(authors "Dale Vaillancourt")
(maintainers "dalev@alum.wpi.edu")
(package
 (name path_tracer)
 (synopsis "library for the geometry-agnostic portion")
 (depends
  (core (>= v0.14.1))
  (stdio (>= v0.14.0))
  (progress (>= 0.2.1))
  (ppx_base (>= v0.14.0))
  (bimage-io (>= 0.4.0))
  (bimage (>= 0.4.0))
  (alcotest (and :with-test (>= "1.4")))
  (base (>= 0.14.1))
  (ocaml (>= 4.12))))
(package
 (name low_discrepancy_sequence)
 (synopsis "a low-discrepancy point sequence in N-dimensions")
 (depends (alcotest (and :with-test (>= "1.4"))) (ocaml (>= 4.12))))
(package
 (name ply_format)
 (synopsis "parse .ply files (stanford triangle format)")
 (depends
  (alcotest (and (>= 1.4.0) :with-test))
  (core_kernel (>= v0.14.1))
  (ppx_sexp_message (>= v0.14.1))
  (ppx_base (>= v0.14.0))
  (parsexp (>= v0.14.1))
  (bigstringaf (>= 0.8.0))
  (base_bigstring (>= v0.14.0))
  (base (>= v0.14.1))
  (ocaml (>= 4.12))))
(generate_opam_files true)
