(rule
 (targets libsphere_intersect.a dllsphere_intersect.so)
 (deps
  (glob_files *.rs))
 (action
  (progn
   (run cargo build --target-dir %{project_root}/../../target --release)
   (run
    sh
    -c
    "mv %{project_root}/../../target/release/libsphere_intersect.so ./dllsphere_intersect.so 2> /dev/null || mv %{project_root}/../../target/release/libsphere_intersect.dylib ./dllsphere_intersect.so")
   (run
    mv
    %{project_root}/../../target/release/libsphere_intersect.a
    libsphere_intersect.a))))

(library
 (name path_tracer)
 (libraries base lwt lwt.unix low_discrepancy_sequence)
 (foreign_archives sphere_intersect)
 (c_library_flags
  (-lpthread -lc -lm)))
